# cliexec

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: publish.yml
skills/cliexec/: SKILL.md
skills/cliexec/agents/: openai.yaml
src/cliexec/: __init__.py  adapter.py  cli.py  config.py  doctor.py  errors.py  models.py  preset_loader.py  service.py  skill_install.py  store.py  supervisor.py  util.py
src/cliexec/assets/skills/cliexec/: SKILL.md
src/cliexec/presets/: agy.toml  claude.toml  codex.toml  grok.toml  opencode.toml
tests/: conftest.py  test_adapter_session.py  test_cli_contract.py  test_cli_state.py  test_config.py  test_doctor.py  test_preset_loader.py  test_runtime_integration.py  test_service_reconcile.py  test_skill_install.py  test_store.py
tests/helpers/: mock_agent.py
