[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "cliexec"
version = "0.1.0"
description = "A local runtime for delegating one-shot tasks between agent CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "CLIExec contributors" }]
keywords = ["agent", "cli", "orchestration", "subprocess"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Build Tools",
]
dependencies = ["click>=8.1,<9"]

[project.scripts]
cliexec = "cliexec.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-timeout>=2.3",
  "ruff>=0.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cliexec"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

